# nnse

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
evb/: Makefile  autogen.mk  nnsp-make.mk
evb/libs/: linker_script.ld
evb/make/: local_overrides.mk  nest-makefile.mk  neuralspot_config.mk  neuralspot_toolchain.mk
evb/src/: PcmBufClass.h  arm_intrinsic_test.c  arm_intrinsic_test.h  def_nn0_s2i.c  def_nn0_s2i.h  def_nn1_vad.c  def_nn2_kws_galaxy.c  def_nn2_kws_galaxy.h  def_nn3_se.c  def_nn3_se.h  def_nn3_se_new.c  main_nnsp.cc  main_s2i.cc  main_se.cc  nnCntrlClass.c  nnCntrlClass.h  quant_model_act.h  s2iCntrlClass.c  seCntrlClass.c  seCntrlClass.h  tflite.cc  tflite.h
ns-nnsp/: module.mk
ns-nnsp/includes-api/: activation.h  affine_acc32b.h  ambiq_nnsp_const.h  ambiq_nnsp_debug.h  ambiq_stdint.h  complex.h  debug_files.h  feature_module.h  fft.h  fft_arm.h  lstm.h  melSpecProc.h  minmax.h  nn_speech.h  nnid_class.h  nnsp_identification.h  s2i_const.h  spectrogram_module.h
ns-nnsp/src/: activation.c  affine.c  affine_acc32b.c  complex.c  debug_files.c  feature_module.c  fft.c  fft_arm.c  fixlog10.c  iir.c  lstm.c  melSpecProc.c  melSpec_coeff_nfilt22_fftsize256.c  melSpec_coeff_nfilt40.c  melSpec_coeff_nfilt40_fftsize512.c  melSpec_coeff_nfilt72.c  melSpec_coeff_nfilt72_fftsize512.c  neural_nets.c  nn_speech.c  nnid_class.c  spectrogram_module.c  (+4 more)
python/: LSTM_16x8bit.tflite  LSTM_8x8bit.tflite  README.md  c_code_table_converter.py  convert2tflite.py  data_se.py  fbank_mel.npy  mack_fsd50k.py  requirements.txt  test_se.py  train_se.py
(+168 files in other folders)
